# ANOTA

./: .gitignore  README.md  syscall_name.c
ANOTA-interpreter/: Makefile.pre.in  README.md  anota_object_access_test.py  anota_syscall_integration_test.py  anota_syscall_signal_test.py  anota_syscall_test.py  anota_taint_test.py  reproduce_issue.py  test_nested_sink.py  test_taint_propagation.py
ANOTA-interpreter/Include/: anota_execution.h  anota_syscall.h  anota_taint.h  anota_watch.h
ANOTA-interpreter/Modules/: posixmodule.c  socketmodule.c
ANOTA-interpreter/Modules/_io/: _iomodule.c
ANOTA-interpreter/Python/: anota_execution.c  anota_syscall.c  anota_taint.c  anota_watch.c  bltinmodule.c  ceval.c
ANOTA-interpreter/syscall-module/: Cargo.toml  README.md  syscall_event_list.txt
ANOTA-interpreter/syscall-module/syscall-tracepoint/: Cargo.toml
ANOTA-interpreter/syscall-module/syscall-tracepoint-common/: Cargo.toml
ANOTA-interpreter/syscall-module/syscall-tracepoint-common/src/: lib.rs
ANOTA-interpreter/syscall-module/syscall-tracepoint-ebpf/: Cargo.toml
ANOTA-interpreter/syscall-module/syscall-tracepoint-ebpf/src/: file.rs  main.rs  process.rs
ANOTA-interpreter/syscall-module/syscall-tracepoint/src/: file.rs  main.rs  process.rs
ANOTA-interpreter/syscall-module/test_program/: test  test_file.c
ANOTA-interpreter/syscall-module/xtask/src/: build_ebpf.rs  run.rs
