[package]
name = "syscall-tracepoint-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-ebpf = { version = "0.1", package = "aya-ebpf" }
aya-log-ebpf = { version = "0.1", package = "aya-log-ebpf" }
syscall-tracepoint-common = { path = "../syscall-tracepoint-common" }

[[bin]]
name = "syscall-tracepoint"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[workspace]
members = []
